<resources>
    <string name="app_name">CMM</string>
    <string name="text_status_started">Aparelho sem número</string>
    <string name="text_status_send">Existe dados para serem enviado</string>
    <string name="text_status_sending">Dados estão sendo enviados</string>
    <string name="text_status_sent">Não existe dados para serens enviados</string>
    <string name="text_title_password">SENHA</string>
    <string name="text_pattern_ok">OK</string>
    <string name="text_pattern_save_update">SALVAR/ATUALIZAR DADOS</string>
    <string name="text_pattern_save">SALVAR</string>
    <string name="text_pattern_cancel">CANCELAR</string>
    <string name="text_password_invalid">SENHA INVÁLIDA!</string>
    <string name="text_failure">FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_blocked_access_app">ACESSO NEGADO! POR FAVOR, CONFIGURE O APLICATIVO ANTES DO USO DO MESMO!</string>
    <string name="text_title_nro_aparelho">NRO APARELHO</string>
    <string name="text_title_nro_equip">NRO EQUIPAMENTO</string>
    <string name="text_field_empty_config">CAMPO VAZIO! POR FAVOR, PREENCHA TODOS OS CAMPOS PARA SALVAR AS CONFIGURAÇÕES E ATUALIZAR TODAS AS BASES DE DADOS.</string>
    <string name="text_recover_token">FALHA DE RECUPERACAO DE TOKEN! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_update_failure">FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_config_success">CONFIGURAÇÃO REALIZADA COM SUCESSO!</string>
    <string name="text_title_operator">MATRICULA OPERADOR</string>
    <string name="text_number_1">1</string>
    <string name="text_number_2">2</string>
    <string name="text_number_3">3</string>
    <string name="text_number_4">4</string>
    <string name="text_number_5">5</string>
    <string name="text_number_6">6</string>
...
    <string name="text_pattern_no">NÃO</string>
    <string name="text_pattern_yes">SIM</string>
    <string name="text_button_according">CONFORME (OK)</string>
    <string name="text_button_analyze">NÃO CONFORME (ANALISAR)</string>
    <string name="text_button_repair">NÃO CONFORME (REPARO)</string>
    <string name="text_title_initial_menu">MENU INICIAL - V %1$s</string>
    <string name="text_item_note">APONTAMENTO</string>
    <string name="text_item_config">CONFIGURAÇÃO</string>
    <string name="text_item_out">SAIR</string>
    <string name="text_title_history">HISTÓRICO</string>
    <string name="text_msg_no_data_history">NÃO CONTÉM APONTAMENTO NO BOLETIM.</string>">
    <string name="text_item_work">ATIVIDADE: %1$s</string>
    <string name="text_item_stop">PARADA: %1$s</string>
    <string name="text_msg_note_mechanic_open">POR FAVOR, FINALIZE O APONTAMENTO DE MANUTENÇÃO PARA INICIAR OUTRO APONTAMENTO.</string>
    <string name="text_button_finish_header">FINALIZAR BOLETIM</string>
...
